feat(s3): Enhance presigned POST functionality with improved URL resolution and condition handling